# indycar_foxy

command/indyav_launch/: CMakeLists.txt  package.xml
command/indyav_launch/launch/: controls.launch  gazebo.launch  joydrive.launch  joydrive.launch.py  odometry.launch.py  tf.launch  upload_urdf.launch
control/indyav_control/: CMakeLists.txt  package.xml
control/indyav_control/src/: joy_teleop.cpp  simulated_steering_driver.cpp
interfaces/indyav_interfaces/: CMakeLists.txt  package.xml
interfaces/indyav_interfaces/msg/: RevsStamped.msg  SteeringStamped.msg
localization/indyav_localization/: CMakeLists.txt  package.xml
localization/indyav_localization/src/: dumb_truth_odom_tf.cpp
simulation/indayv_gazebo/: CMakeLists.txt  package.xml
simulation/indayv_gazebo/include/indyav_gazebo/: backwheel_plugin.hpp  sylphase_gazebo.hpp  wheel_plugin.hpp
simulation/indayv_gazebo/launch/: swan.launch
simulation/indayv_gazebo/src/: backwheel_plugin.cpp  sylphase_gazebo.cpp  wheel_plugin.cpp
simulation/indayv_gazebo/urdf/: indyav_car.urdf.xacro
simulation/indayv_gazebo/worlds/speedways/: new_smyrna_speedway.xacro
simulation/indayv_gazebo/xacro/: go_kart.xacro  sylphase.xacro  wheels.xacro
